<resources>
    <string name="http_tu">http://enjoyimage.toeat.eu</string>
    <string name="http_msg">http://salemanapi.toeat.eu</string>
    <string name="app_name">美食菌_业务员</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="name_hint">请输入用户名</string>
    <string name="login_num">密码</string>
    <string name="num_hint">请输入密码</string>
    <string name="sure">确定</string>
    <string name="home_title">商家首页</string>
    <string name="home">首页</string>
    <string name="add">添加</string>
    <string name="apply">申请</string>
    <string name="mine">我的</string>
    <string name="add_title">添加商家</string>
    <string name="apply_title">业务申请</string>
    <string name="mine_title">个人信息</string>
    <string name="mine_out">退出</string>
    <string name="saleman_name">业务员昵称:</string>
    <string name="saleman_phone">业务员手机号:</string>
    <string name="dishes_manager">菜品管理</string>
    <string name="buy_manager">团购管理</string>
    <string name="take_out_manager">外卖管理</string>
    <string name="cash_manager">代金券管理</string>
    <string name="revise">修改</string>
    <string name="delete">删除</string>
    <string name="no_more">没有更多了</string>
    <string name="apply_food">套餐申请</string>
    <string name="apply_cash">代金券申请</string>
    <string name="dishes_num">菜品编码</string>
    <string name="dishes_price">菜品原价</string>
    <string name="discount_price">折扣价格</string>
    <string name="dishes_nameCN">菜品名称(中文)</string>
    <string name="dishes_nameES">菜品名称(西班牙语)</string>
    <string name="dishes_nameEN">菜品名称(英文)</string>
    <string name="dishes_name">菜品名称</string>
    <string name="dishes_introduceCN">菜品介绍(中文)</string>
    <string name="dishes_introduceES">菜品介绍(西班牙语)</string>
    <string name="dishes_introduceEN">菜品介绍(英文)</string>
    <string name="dishes_batching">菜品配料</string>
    <string name="dishes_picture">菜品图片</string>
    <string name="word100">(100字)</string>
    <string name="add_dishes">添加菜品</string>
    <string name="dish">菜</string>
    <string name="sweet">甜品</string>
    <string name="drank">饮料</string>
    <string name="sellerType">商家所属类型</string>
    <string name="ShopName_CN">店铺名称(中文)</string>
    <string name="ShopName_EN">店铺名称(英文)</string>
    <string name="ShopName_ES">店铺名称(西班牙语)</string>
    <string name="ShopName">店铺名称</string>
    <string name="Remark_CN">店铺介绍(中文)</string>
    <string name="Remark_EN">店铺介绍(英文)</string>
    <string name="Remark_ES">店铺介绍(西班牙语)</string>
    <string name="Shop_Password">店铺密码</string>
    <string name="Shop_ZipCode">店铺邮编</string>
    <string name="Shop_Email">店铺邮箱</string>
    <string name="Shop_Mobile">店铺手机</string>
    <string name="Address">所在地址</string>
    <string name="Address_2">详细地址</string>
    <string name="Shop_time">店铺营业时间</string>
    <string name="Shop_time_am">中午营业时间</string>
    <string name="Shop_time_pm">晚上营业时间</string>
    <string name="Freight">配送费</string>
    <string name="StarTake_money">起送价</string>
    <string name="Arrive_time">送达时间</string>
    <string name="CIF">税号</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="MON">星期一</string>
    <string name="TUE">星期二</string>
    <string name="WED">星期三</string>
    <string name="THU">星期四</string>
    <string name="FRI">星期五</string>
    <string name="SAT">星期六</string>
    <string name="SUN">星期日</string>
    <string name="add_picture">添加图片</string>
    <string name="add_type">添加分类</string>
    <string name="manege">管理</string>
    <string name="choose">选择</string>
    <string name="cash_Id">代金券编码</string>
    <string name="cash_Price">代金券面值</string>
    <string name="cash_Discountprice">代金券价格</string>
    <string name="cash_Title_CN">代金券名称(中文)</string>
    <string name="cash_Title_EN">代金券名称(英文)</string>
    <string name="cash_Title_ES">代金券名称(西班牙语)</string>
    <string name="cash_Title">代金券名称</string>
    <string name="cash_Introduce_CN">代金券介绍(中文)</string>
    <string name="cash_Introduce_EN">代金券介绍(英文)</string>
    <string name="cash_Introduce_ES">代金券介绍(西班牙语)</string>
    <string name="cash_Introduce">代金券介绍</string>
    <string name="add_cash">添加代金券</string>
    <string name="typeName">分类名称:</string>
    <string name="typeName_in">输入分类名称</string>
    <string name="add_groupBuy">添加团购</string>
    <string name="GroupCode">团购编码</string>
    <string name="groupPrice">团购原价</string>
    <string name="groupDiscountprice">折扣价格</string>
    <string name="groupTitle_CN">团购名称(中文)</string>
    <string name="groupTitle_EN">团购名称(英文)</string>
    <string name="groupTitle_ES">团购名称(西班牙语)</string>
    <string name="groupIntro_CN">团购介绍(中文)</string>
    <string name="groupIntro_EN">团购介绍(英文)</string>
    <string name="groupIntro_ES">团购介绍(西班牙语)</string>
    <string name="firstFood">第一道菜</string>
    <string name="secondFood">第二道菜</string>
    <string name="thirdFood">第三道菜</string>
    <string name="coverPic">封面图片</string>
</resources>
