<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70px"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_store_dishes"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="70px"
                android:layout_height="70px"
                android:gravity="center"
                android:background="@drawable/store_dishes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dishes_manager"
                style="@style/gray28_79"
                android:gravity="center"
                android:layout_marginTop="24px"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_store_buy"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="70px"
                android:layout_height="70px"
                android:gravity="center"
                android:background="@drawable/buy_manager"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_manager"
                style="@style/gray28_79"
                android:gravity="center"
                android:layout_marginTop="24px"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_store_out"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="70px"
                android:layout_height="70px"
                android:gravity="center"
                android:background="@drawable/take_out_manager"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_out_manager"
                style="@style/gray28_79"
                android:gravity="center"
                android:layout_marginTop="24px"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_store_cash"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="70px"
                android:layout_height="70px"
                android:gravity="center"
                android:background="@drawable/cash_manager"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_manager"
                style="@style/gray28_79"
                android:gravity="center"
                android:layout_marginTop="24px"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
